<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/command_edit_dialog_command_text"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:hint="@string/command_edit_dialog_hint" />
    
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:orientation="horizontal"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content">
				    
	    <Button android:id="@+id/command_edit_dialog_button_restore"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/command_edit_dialog_button_restore"
	            android:layout_weight="1"
	            
	    />
	    
	    <Button android:id="@+id/command_edit_dialog_button_clear"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/command_edit_dialog_button_clear"
	            android:layout_weight="1"
	           
	        />
    </LinearLayout>
</LinearLayout>